#Melhoria: correção de issue aberta pelo sonarqube.